--- a/projects/icc/portal/src/portal.component.html
+++ b/projects/icc/portal/src/portal.component.html
@@ -1,4 +1,10 @@
+<div *ngIf="portalType == 'text'" [innerHTML]="content"></div>
+<ng-template cdkPortalOutlet></ng-template>
+
+<!--
+  <ng-template cdkPortalOutlet></ng-template>
 <div class="icc-portal-content">
   <div *ngIf="portalType == 'text'" [innerHTML]="content"></div>
   <ng-template cdkPortalOutlet></ng-template>
 </div>
+-->
