--- a/projects/icc/portal/src/portal.component.scss
+++ b/projects/icc/portal/src/portal.component.scss
@@ -1,7 +1,13 @@
 :host {
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+}
+
+/*
   .icc-portal-content {
     height: 100%;
     width: 100%;
     overflow: auto;
   }
-}
+    */
