--- a/projects/icc-demo/src/app/views/menu/demos/simple-menu/dialog.component.html
+++ b/projects/icc-demo/src/app/views/menu/demos/simple-menu/dialog.component.html
@@ -1,3 +1,43 @@
-<div>Test 1</div>
+<icc-layout [resizeable]="false" height="500px" width="600px" style="padding: 2px">
+  <icc-layout-header
+    >Header
 
-<button icc-button (click)="close()">Close</button>
+    <button icc-button (click)="close()">Close</button>
+  </icc-layout-header>
+
+  <icc-layout-horizontal [resizeable]="false">
+    <icc-layout-left> </icc-layout-left>
+
+    <icc-layout-center> Horizontal Layout With header and footer panels </icc-layout-center>
+
+    <icc-layout-right> </icc-layout-right>
+  </icc-layout-horizontal>
+
+  <icc-layout-footer> Footer </icc-layout-footer>
+</icc-layout>
+
+/*
+<div
+  *ngIf="resizeable"
+  IccResizeRight
+  iccResize
+  [direction]="resizeType.RIGHT"
+  [elementKey]="elementKey"
+  (iccResizeEvent)="onResizePanel($event)"
+></div>
+<div
+  *ngIf="resizeable"
+  IccResizeBottom
+  iccResize
+  [direction]="resizeType.BOTTOM"
+  [elementKey]="elementKey"
+  (iccResizeEvent)="onResizePanel($event)"
+></div>
+<div
+  *ngIf="resizeable"
+  IccResizeBottomRight
+  iccResize
+  [direction]="resizeType.BOTTOM_RIGHT"
+  [elementKey]="elementKey"
+  (iccResizeEvent)="onResizePanel($event)"
+></div>
