--- a/projects/icc-demo/src/app/views/menu/demos/simple-menu/dialog.component.scss
+++ b/projects/icc-demo/src/app/views/menu/demos/simple-menu/dialog.component.scss
@@ -1,6 +1,7 @@
 :host {
   display: block;
-  width: 600px;
-  height: 400px;
-  border: 1px solid red;
+  width: 100%;
+  height: 100%;
+  border: 1px solid goldenrod;
+  overflow: hidden;
 }
