add window dialog base

--- a/projects/icc-demo/src/app/views/menu/demos/simple-menu/dialog-test.component.html
+++ b/projects/icc-demo/src/app/views/menu/demos/simple-menu/dialog-test.component.html
@@ -1,4 +1,4 @@
-<app-dialog>
+<icc-window>
   <icc-layout [resizeable]="false" height="500px" width="600px" style="padding: 2px">
     <icc-layout-header
       >Header
@@ -16,4 +16,4 @@
 
     <icc-layout-footer> Footer </icc-layout-footer>
   </icc-layout>
-</app-dialog>
+</icc-window>
