--- a/projects/icc/window/src/window.component.scss
+++ b/projects/icc/window/src/window.component.scss
@@ -2,6 +2,6 @@
   display: block;
   width: 100%;
   height: 100%;
-  border: 1px solid goldenrod;
+  border: 1px solid cyan;
   overflow: hidden;
 }
