--- a/projects/icc/window/src/window.component.html
+++ b/projects/icc/window/src/window.component.html
@@ -23,3 +23,4 @@
   [elementKey]="elementKey"
   (iccResizeEvent)="onResizePanel($event)"
 ></div>
+<button icc-button (click)="close()">Close Window</button>
