--- a/projects/icc/window/src/window.component.scss
+++ b/projects/icc/window/src/window.component.scss
@@ -1,7 +1,14 @@
 :host {
-  display: block;
+  display: flex;
   width: 100%;
   height: 100%;
-  border: 1px solid cyan;
-  overflow: hidden;
+
+  .icc-dragable-window {
+    display: block;
+    width: 100%;
+    height: 100%;
+    z-index: 20000;
+    border: 1px solid pink;
+    overflow: hidden;
+  }
 }
