--- a/projects/icc/window/src/window.component.scss
+++ b/projects/icc/window/src/window.component.scss
@@ -4,6 +4,14 @@
   height: 100%;
   position: relative;
 
+  icc-layout-header {
+    height: 25px;
+  }
+
+  icc-icon {
+    padding-right: 0px;
+  }
+
   .icc-dragable-window {
     display: block;
     width: 100%;
