--- a/projects/icc-demo/src/app/views/menu/demos/simple-menu/dialog-test.component.html
+++ b/projects/icc-demo/src/app/views/menu/demos/simple-menu/dialog-test.component.html
@@ -1,5 +1,5 @@
 <icc-window [windowConfig]="windowConfig">
-  <icc-layout [resizeable]="false" height="500px" width="600px" style="padding: 2px">
+  <icc-layout [resizeable]="false" style="padding: 1px">
     <icc-layout-header
       >Header
 
