--- a/projects/icc/window/src/window.component.scss
+++ b/projects/icc/window/src/window.component.scss
@@ -13,7 +13,8 @@
   }
 
   .icc-dragable-window {
-    display: block;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     z-index: 20000;
