--- a/projects/icc/grid/src/_grid.component.theme.scss
+++ b/projects/icc/grid/src/_grid.component.theme.scss
@@ -11,7 +11,14 @@
       border-bottom: 1px solid icc-theme(app-border-basic-color);
     }
 
-    icc-grid-row:nth-child(odd) {
+    icc-grid-row-group {
+      border-left: 1px solid icc-theme(app-border-basic-color);
+      border-right: 1px solid icc-theme(app-border-basic-color);
+      border-bottom: 1px solid icc-theme(app-border-basic-color);
+    }
+
+    .icc-grid-row:nth-child(odd) {
+      // TODO odd and even is not working
       background-color: icc-theme(icc-grid-row-odd-background-color);
       &:focus,
       &:hover {
@@ -19,7 +26,7 @@
       }
     }
 
-    icc-grid-row:nth-child(even) {
+    .icc-grid-row:nth-child(even) {
       background-color: icc-theme(icc-grid-row-even-background-color);
       &:focus,
       &:hover {
