--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -17,9 +17,14 @@
 >
   <ng-container *ngIf="gridData$ | async as gridData">
     <div *cdkVirtualFor="let record of gridData; trackBy: trackByIndex; let index = index">
-      <div *ngIf="isRowGroup(index, record)">
-        {{ getRowGroupDisplay(index, record) }}
-      </div>
+      <icc-grid-row-group
+        *ngIf="isRowGroup(index, record)"
+        [gridConfig]="gridConfig"
+        [rowIndex]="index"
+        [record]="record"
+      >
+      </icc-grid-row-group>
+
       <icc-grid-row
         *ngIf="!isRowGroup(index, record)"
         [gridConfig]="gridConfig"
