row group expand events

--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -23,7 +23,7 @@
           [gridConfig]="gridConfig"
           [rowIndex]="index"
           [record]="record"
-          (onToggleRowGroup)="onToggleRowGroup($event, rowGroups, gridData)"
+          (onToggleRowGroup)="onToggleRowGroup(rowGroups)"
         >
         </icc-grid-row-group>
       </ng-container>
