row group expand and collapse

--- a/projects/icc/grid/src/components/grid-row/grid-row-group.component.html
+++ b/projects/icc/grid/src/components/grid-row/grid-row-group.component.html
@@ -1,4 +1,4 @@
 <div [ngStyle]="{ height: gridConfig.rowHeight + 'px' }" (click)="toggleRowGroup()">
   <icc-icon [icon]="record.expanded ? 'minus' : 'plus'"></icc-icon>
-  {{ rowGroup }}
+  {{ title | translate }}: {{ record.value }} ({{ record.totalCounts }})
 </div>
