--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -22,6 +22,7 @@
           *ngIf="isRowGroup(index, record)"
           [gridConfig]="gridConfig"
           [rowIndex]="index"
+          [columns]="columns"
           [record]="record"
           (onToggleRowGroup)="onToggleRowGroup(rowGroups)"
         >
