add group header

--- a/projects/icc/grid/src/components/grid-header-view/grid-header-view.component.html
+++ b/projects/icc/grid/src/components/grid-header-view/grid-header-view.component.html
@@ -1,4 +1,15 @@
 <div class="grid-header-container" [ngStyle]="{ flex: '0 0 ' + tableWidth + 'px' }">
+  <icc-grid-group-header
+    *ngIf="gridConfig.groupHeader"
+    [ngStyle]="{
+      left: columnHeaderPosition + 'px',
+    }"
+    [gridConfig]="gridConfig"
+    [columns]="columns"
+    [columnWidths]="columnWidths"
+  >
+  </icc-grid-group-header>
+
   <icc-grid-header
     [ngStyle]="{
       left: columnHeaderPosition + 'px',
