grid header height config

--- a/projects/icc/grid/src/components/grid-header-view/grid-header-view.component.html
+++ b/projects/icc/grid/src/components/grid-header-view/grid-header-view.component.html
@@ -3,6 +3,7 @@
     *ngIf="gridConfig.groupHeader"
     [ngStyle]="{
       left: columnHeaderPosition + 'px',
+      height: gridConfig.headerHeight + 'px',
     }"
     [gridConfig]="gridConfig"
     [columns]="columns"
