--- a/projects/icc/grid/src/components/grid-header/grid-group-header/grid-group-header.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-group-header/grid-group-header.component.scss
@@ -1,9 +1,11 @@
 :host {
   display: flex;
   width: 100%;
-  height: 30px; // TODO move to constant?
 
   icc-grid-header-item {
+    padding: 0 10px;
     border-bottom-width: 0px;
+    flex-direction: row;
+    justify-content: center; // start | center | end
   }
 }
