grid header resize

--- a/projects/icc/grid/src/components/grid-header-view/grid-header-view.component.html
+++ b/projects/icc/grid/src/components/grid-header-view/grid-header-view.component.html
@@ -8,7 +8,7 @@
     [gridConfig]="gridConfig"
     [columns]="columns"
     [columnWidths]="columnWidths"
-    (columnResizing)="onHeaderColumnResizing($event)"
+    (columnResizing)="onColumnResizing($event)"
     (columnResized)="onColumnResized($event)"
   >
   </icc-grid-group-header>
