--- a/projects/icc/grid/src/components/grid-header/grid-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header.component.html
@@ -47,6 +47,6 @@
     ></div>
 
     <div class="drag-placeholder" *cdkDragPlaceholder></div>
-    <div *ngIf="gridConfig.columnResize" class="resize-action" iccColumnResizeTrigger></div>
+    <div *ngIf="gridConfig.columnResize" class="icc-grid-column-resize-action" iccColumnResizeTrigger></div>
   </icc-grid-header-item>
 </ng-container>
