--- a/projects/icc/grid/src/_grid.component.theme.scss
+++ b/projects/icc/grid/src/_grid.component.theme.scss
@@ -91,6 +91,39 @@
     .grid-cell-align-right {
       justify-content: right;
     }
+
+    .icc-grid-column-resize-action {
+      width: 10px;
+      height: 60px;
+      position: absolute;
+      right: -5px;
+      z-index: 3;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+
+      &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top: 0;
+        height: 20px;
+        width: 1px;
+        margin: auto;
+        //background-color: red;
+      }
+
+      &:hover,
+      &:active {
+        cursor: ew-resize;
+      }
+    }
   }
 
   // preview must be outside
