add row seletion all

--- a/projects/icc/grid/src/components/grid-header/grid-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header.component.html
@@ -2,8 +2,8 @@
   <icc-row-select
     class="icc-header-row-select"
     [ngStyle]="{ height: gridConfig.headerHeight + 'px' }"
-    [isSelected]="allSelected"
-    (selected)="onToggleSelectAllRowsOnCurrentPage()"
+    [selected]="allSelected"
+    (click)="onToggleSelectAll()"
   >
   </icc-row-select>
   <div
