--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -37,7 +37,7 @@
           [columns]="columns"
           [columnWidths]="columnWidths"
           [record]="getRecord(record)"
-          [selection]="selection"
+          [selected]="selected(record, selection)"
         >
         </icc-grid-row>
       </ng-container>
