--- a/projects/icc/grid/src/components/row-select/row-select.component.html
+++ b/projects/icc/grid/src/components/row-select/row-select.component.html
@@ -1,3 +1,6 @@
 <div>
-  <icc-checkbox [checked]="isSelected" (change)="select()"> </icc-checkbox>
+  <icc-checkbox [checked]="selected"> </icc-checkbox>
 </div>
+<!--
+  <icc-checkbox [checked]="isSelected" (change)="select()"> </icc-checkbox>
+  -->
