--- a/projects/icc/tree/src/components/tree-row/tree-row.component.html
+++ b/projects/icc/tree/src/components/tree-row/tree-row.component.html
@@ -3,7 +3,7 @@
   class="icc-tree-cell-row-select"
   [ngStyle]="{ height: treeConfig.rowHeight + 'px', flex: '0 0 ' + selectColumnWidth, 'max-width': selectColumnWidth }"
 >
-  <icc-row-select [isSelected]="selected" (selected)="toggleRowSelection()"> </icc-row-select>
+  <icc-row-select [selected]="selected" (selected)="toggleRowSelection()"> </icc-row-select>
 </icc-grid-cell>
 
 <icc-grid-cell
