update row selection

--- a/projects/icc/checkbox/src/_checkbox.component.theme.scss
+++ b/projects/icc/checkbox/src/_checkbox.component.theme.scss
@@ -42,7 +42,8 @@
       margin-left: 0.5rem;
     }
 
-    input:checked + .icc-checkbox-container {
+    input:checked + .icc-checkbox-container,
+    input:indeterminate + .icc-checkbox-container {
       /*
       min-width: 1rem;
       width: 1rem;
