--- a/projects/icc/checkbox/src/checkbox.component.html
+++ b/projects/icc/checkbox/src/checkbox.component.html
@@ -10,7 +10,7 @@
     (click)="$event.stopPropagation()"
   />
   <span class="icc-checkbox-container">
-    <icc-icon *ngIf="indeterminate" icon="minus"></icc-icon>
+    <icc-icon [ngClass]="indeterminate ? 'indeterminate' : ''" *ngIf="indeterminate" icon="minus"></icc-icon>
     <icc-icon [ngClass]="checked ? 'checked' : ''" *ngIf="!indeterminate" icon="check"></icc-icon>
   </span>
   <span class="icc-checkbox-label">
