grid row backgroud

--- a/projects/icc/menu/src/menus.component.html
+++ b/projects/icc/menu/src/menus.component.html
@@ -1,3 +1,4 @@
+<!-- Use form due to the use checkbox in the menu item -->
 <form *ngIf="form" [formGroup]="form">
   <ng-container *ngFor="let item of items">
     <icc-menu-item
