--- a/projects/icc/calendar/src/month-header/month-header.component.scss
+++ b/projects/icc/calendar/src/month-header/month-header.component.scss
@@ -1,20 +1,20 @@
-@import "../styles/calendar-constants";
-@import "../styles/calendar-mixins";
+@use "../styles/calendar-constants" as calendarConstants;
+@use "../styles/calendar-mixins" as calendar;
 
 .icc-month-header {
-  @include calendarGrid();
+  @include calendar.calendarGrid();
 
   &__caption {
-    @include calendarGridCell();
+    @include calendar.calendarGridCell();
     flex-grow: 1;
 
     grid-column: 2 / span 5;
   }
 
   &__stepper {
-    @include calendarGridCell();
+    @include calendar.calendarGridCell();
 
-    height: $cal-cell-size !important;
+    height: calendarConstants.$cal-cell-size !important;
     padding: 0;
     margin: 0;
     border: 0;
