--- a/projects/icc/calendar/src/weekdays/weekdays.component.scss
+++ b/projects/icc/calendar/src/weekdays/weekdays.component.scss
@@ -1,13 +1,13 @@
-@import "../styles/calendar-mixins";
+@use "../styles/calendar-mixins" as calendar;
 
 .icc-weekdays {
-  @include calendarGrid();
   position: sticky;
   top: 0;
   z-index: 1;
+  @include calendar.calendarGrid();
 
   &__day {
-    @include calendarGridCell();
+    @include calendar.calendarGridCell();
     font-variant: none;
     text-decoration: none;
   }
